testing/framework/resources/Advanced/Failing/mondrian/query2470.q
selectn    count(*) as c0n fromn    agg_l_05_sales_fact_1997 as agg_l_05_sales_fact_1997;
